# rusticos

./: .gitignore  CONTRIBUTING.md  Makefile  README.md
.github/workflows/: kernel.yaml
bootloader/: bootloader.asm  disk.asm  gdt_32.asm  kernel_entry.asm  print.asm  print_32.asm  switch_32.asm
kernel/: Cargo.toml  Makefile
kernel/src/: lib.rs  main.rs
kernel/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
kernel/src/interrupts/: gdt.rs  interrupts.rs  mod.rs
kernel/src/memory/: memory.rs  mod.rs
kernel/src/scheduler/: mod.rs  userspace.rs
kernel/src/syscalls/: handlers.rs  mod.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs
kernel/src/userspace/: mod.rs
kernel/src/vga/: vga_buffer.rs
kernel/src/vga_buffer/: mod.rs
kernel/tests/: basic_boot_test.rs  heap_allocation_test.rs  should_panic_test.rs  stack_overflow_test.rs  vga_buffer_test.rs
